--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Suite landing page</title>
 </head>
 
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <main class="main">
-    <div class="first">
+    <div class="main_left">
       <div class="main_title">
         <p> <span>A</span> super solution <span>for your</span> business.</p>
       </div>
@@ -35,7 +35,7 @@
         <button class="main_button">Request Beta Access</button>
       </div>
     </div>
-    <div class="second">
+    <div class="main_rigth">
       <div class="static">
         <p class="numbers">2K+</p>
         <p class="p">Companies</p>
